--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "delboy1978uk/phpbitcoin",
+    "name": "delboy1978uk/btcexchange",
     "description": "A PHP Service for connecting to various Bitcoin exchange API's",
     "license": "MIT",
     "authors": [
