--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.0",
         "guzzlehttp/guzzle": "dev-master"
     },
     "require-dev":{
