--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "dev-master"
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev":{
         "codeception/codeception":"dev-master"
