--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "jaggedsoft/php-binance-api": "^0.5.24"
     },
     "require-dev":{
         "codeception/codeception":"dev-master"
